<resources>
    <string name="app_name">CrocoAndroidApp</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="login">Войти</string>
    <string name="wrong_email">Неправильный email</string>
    <string name="wrong_credentials_format">Неправильные форматы у почты или пароля</string>
    <string name="no_internet">Нет интернета</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="failed_login">Неправильный логин или пароль</string>
    <string name="login_label">Авторизоваться в Приложение</string>
    <string name="profile">Профиль</string>
    <string name="tasks">Задачи</string>
    <string name="personal_info">Личная информация</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="third_name">Отчество</string>
    <string name="sex">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="undefined_sex">Не указано</string>
    <string name="no_data">Нет данных</string>
    <string name="contacts">Контакты</string>
    <string name="email">Email</string>
    <string name="phone_number">Номер телефона</string>
    <string name="choose_users">Выбрать пользователей</string>
    <string name="necessarily_fields">Обязательные поля</string>
    <string name="additional_information">Дополнительная информация</string>
    <string name="birth_date">Дата рождения</string>
    <string name="save">Сохранить</string>
    <string name="wrong_name">Неправильное имя</string>
    <string name="wrong_phone_number">Неправильный номер телефона</string>
    <string name="hint_name">Имя</string>
    <string name="hint_phone_number">Номер телефона</string>
    <string name="hint_second_name">Фамилия</string>
    <string name="hint_third_name">Отчество</string>
    <string name="wrong_field">Проверьте введеные поля</string>
    <string name="no_camera_access">Нет доступа к камере</string>
    <string name="no_files_access">Нет доступа к файлам</string>
    <string name="take_photo">Сделать фото</string>
    <string name="take_from_galery">Выбрать из галереи</string>
    <string name="successful_photo_upload">Ваша фотография была загружена</string>
    <string name="pick_image">Выбери фотографию</string>
</resources>
