<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_edit_profile_constraint_layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fragment_edit_profile_text_view_necessarily_fields_label"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/necessarily_fields"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_edit_profile_text_input_layout_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_name"
                android:imeOptions="actionNext"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:hintAnimationEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_text_view_necessarily_fields_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_edit_profile_text_input_edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="64"
                    android:maxLines="1"
                    tools:text="@tools:sample/first_names" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_edit_profile_text_input_layout_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_phone_number"
                android:imeOptions="actionNext"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:hintAnimationEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_text_input_layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_edit_profile_text_input_edit_text_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="64"
                    android:maxLines="1"
                    tools:text="@tools:sample/us_phones" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fragment_edit_profile_text_view_additional_fields_label"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/additional_information"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_text_input_layout_phone_number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_edit_profile_text_input_layout_second_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_second_name"
                android:imeOptions="actionNext"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:hintAnimationEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_text_view_additional_fields_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_edit_profile_text_input_edit_text_second_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="64"
                    android:maxLines="1"
                    tools:text="@tools:sample/last_names" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_edit_profile_text_input_layout_third_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_third_name"
                android:imeOptions="actionNext"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
                app:hintAnimationEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_text_input_layout_second_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_edit_profile_text_input_edit_text_third_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="64"
                    android:maxLines="1"
                    tools:text="@tools:sample/last_names" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fragment_edit_profile_text_view_birth_date_label"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/birth_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_text_input_layout_third_name" />

            <DatePicker
                android:id="@+id/fragment_edit_profile_date_picker_birth_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_text_view_birth_date_label" />

            <TextView
                android:id="@+id/fragment_edit_profile_text_view_sex_label"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/sex"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_date_picker_birth_date" />

            <RadioGroup
                android:id="@+id/fragment_edit_profile_radio_group_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_text_view_sex_label">

                <RadioButton
                    android:id="@+id/fragment_edit_profile_radio_button_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/fragment_edit_profile_radio_button_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/fragment_edit_profile_radio_button_undefined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/undefined_sex" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_edit_profile_material_button_save"
                style="@style/BigAccentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_edit_profile_radio_group_sex" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/fragment_edit_profile_progress_bar_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>