<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_profile_constraint_layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fragment_profile_image_view_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_personal_info_label"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/fragment_profile_text_view_personal_info_label"
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/personal_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_profile_text_view_name_label"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_image_view_avatar" />

            <TextView
                android:id="@+id/fragment_profile_text_view_name"
                style="@style/DescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/fragment_profile_text_view_name_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_name_label"
                tools:text="@tools:sample/first_names" />

            <TextView
                android:id="@+id/fragment_profile_text_view_second_name_label"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_name" />

            <TextView
                android:id="@+id/fragment_profile_text_view_second_name"
                style="@style/DescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/fragment_profile_text_view_second_name_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_second_name_label"
                tools:text="@tools:sample/last_names" />

            <TextView
                android:id="@+id/fragment_profile_text_view_third_name_label"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/third_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_second_name" />

            <TextView
                android:id="@+id/fragment_profile_text_view_third_name"
                style="@style/DescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/fragment_profile_text_view_third_name_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_third_name_label"
                tools:text="@tools:sample/last_names" />

            <TextView
                android:id="@+id/fragment_profile_text_view_sex_label"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/sex"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_third_name" />

            <TextView
                android:id="@+id/fragment_profile_text_view_sex"
                style="@style/DescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/fragment_profile_text_view_sex_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_sex_label"
                tools:text="@string/male" />

            <TextView
                android:id="@+id/fragment_profile_text_view_contact_info_label"
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/contacts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fragment_profile_text_view_sex" />

            <TextView
                android:id="@+id/fragment_profile_text_view_email_label"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_contact_info_label" />

            <TextView
                android:id="@+id/fragment_profile_text_view_email"
                style="@style/DescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/fragment_profile_text_view_email_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_email_label"
                tools:text="@tools:sample/first_names" />

            <TextView
                android:id="@+id/fragment_profile_text_view_phone_number_label"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_email" />

            <TextView
                android:id="@+id/fragment_profile_text_view_phone_number"
                style="@style/DescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/fragment_profile_text_view_phone_number_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_text_view_phone_number_label"
                tools:text="@tools:sample/first_names" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/fragment_profile_text_view_zero_screen"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_data"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/fragment_profile_progress_bar_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_profile_floating_action_bar_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_edit_white_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>